src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Career_Path_Link__c</fullName>
        <label>Career Path Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Career_Path__c</fullName>
        <label>Career Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competency__c</fullName>
        <inlineHelpText>Skill bucket used to demonstrate mastery</inlineHelpText>
        <label>Competency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_Fit_Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Content Fit Reviewer (for formula)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Content_Fit_Reviewer_formula__c</fullName>
        <formula>Parent.Parent.Content_Fit_Reviewer__r.FirstName + &quot; &quot; +  Parent.Parent.Content_Fit_Reviewer__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Content Fit Reviewer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_Type__c</fullName>
        <label>Content Type</label>
        <picklist>
            <picklistValues>
                <fullName>Certificate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Course</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specialization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Degree</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Degree_Type__c</fullName>
        <label>Degree Type</label>
        <picklist>
            <picklistValues>
                <fullName>Master&apos;s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bachelor&apos;s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bachelor&apos;s Completion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post-Baccalaureate&apos;s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>JustToUpdate__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>To delete</inlineHelpText>
        <label>JustToUpdate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <picklist>
            <picklistValues>
                <fullName>Arabic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>German</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hebrew</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hindi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japanese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Korean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mandarin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portuguese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Urdu</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Launch_Cycle__c</fullName>
        <label>Preferred Launch Cycle (formula)</label>
        <picklist>
            <picklistValues>
                <fullName>Spring 2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May 2017 - Social Impact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fall 2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Winter 2017/2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>September Challenge</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Market_Demand__c</fullName>
        <label>Market Demand</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pedagogy_Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pedagogy Reviewer (for formula)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaigns1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pedagogy_Reviewer_formula__c</fullName>
        <formula>Parent.Parent.Pedagogy_Reviewer__r.FirstName + &quot; &quot; + Parent.Parent.Pedagogy_Reviewer__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pedagogy Reviewer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_Reqs__c</fullName>
        <label>Pre-Reqs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Preferred_Launch_Cycle__c</fullName>
        <formula>TEXT(Parent.Launch_Cycle__c )</formula>
        <label>Preferred Launch Cycle</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Source__c</fullName>
        <inlineHelpText>What type of Partner do we want this content from?</inlineHelpText>
        <label>Preferred Source</label>
        <picklist>
            <picklistValues>
                <fullName>University</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CoPartnership- IP&amp;University</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Promotion__c</fullName>
        <inlineHelpText>Trending Topic marketing promotion</inlineHelpText>
        <label>Mktg Promotion</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sourcing_Priority__c</fullName>
        <inlineHelpText>1 = High Priority -- 4 = Lower Priority</inlineHelpText>
        <label>Sourcing Priority</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Target_Audience_List__c</fullName>
        <inlineHelpText>Target Audience for Wishlist</inlineHelpText>
        <label>Target Audience List</label>
        <picklist>
            <controllingField>Vertical__c</controllingField>
            <picklistValues>
                <fullName>Software Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distributed Systems Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mathematician</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self-Driving Car Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Systems Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Systems Architect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Vison Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solutions Architect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software Architect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DevOps Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physicist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research Scientist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Embedded Software Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Robotics Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mechanical Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AI Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Scientists</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Machine Learning Engineers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Actuaries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Science Researchers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Engineers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Journalists</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Auditor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Security Analyst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Security Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Security Architect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Security Officer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Coder</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Target_Audience_Text__c</fullName>
        <label>Target Audience</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Topic_1__c</fullName>
        <label>Topic 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Topic_2__c</fullName>
        <label>Topic 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Topic_3__c</fullName>
        <label>Topic 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Vertical__c</fullName>
        <globalPicklist>Vertical</globalPicklist>
        <label>Vertical</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vertical_formula__c</fullName>
        <formula>TEXT(Parent.Vertical__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Campaign Vertical</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wishlist_Origin__c</fullName>
        <label>Wishlist Origin</label>
        <picklist>
            <picklistValues>
                <fullName>B2C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B2B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B2G</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Wishlist_Type__c</fullName>
        <inlineHelpText>Wishlist type for the campaign</inlineHelpText>
        <label>Wishlist Type</label>
        <picklist>
            <picklistValues>
                <fullName>CS/DS Wishlist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Career Learning Paths (Career Tracks)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Star Professors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workforce Development</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>Active_Content</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>CAMPAIGN.NAME</columns>
        <columns>Content_Type__c</columns>
        <columns>PARENT_NAME</columns>
        <columns>Vertical__c</columns>
        <columns>CAMPAIGN.NUM_OPPORTUNITIES</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PARENT_NAME</field>
            <operation>contains</operation>
            <value>Career</value>
        </filters>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Campaigns - Content Level</label>
    </listViews>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>Content_Type__c</columns>
        <columns>PARENT_NAME</columns>
        <columns>Vertical__c</columns>
        <columns>Vertical_formula__c</columns>
        <columns>CAMPAIGN.NUM_OPPORTUNITIES</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>All_Active_B2B_B2G</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>Wishlist_Origin__c</columns>
        <columns>CAMPAIGN.NUM_OPPORTUNITIES</columns>
        <columns>Content_Type__c</columns>
        <columns>Vertical__c</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Wishlist_Origin__c</field>
            <operation>equals</operation>
            <value>B2B,B2G</value>
        </filters>
        <filters>
            <field>PARENT_NAME</field>
            <operation>notEqual</operation>
            <value>BUSINESS,TECH,DATA</value>
        </filters>
        <label>All Active B2B/B2G</label>
    </listViews>
    <listViews>
        <fullName>All_Active_B2C_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>CAMPAIGN.NUM_OPPORTUNITIES</columns>
        <columns>Content_Type__c</columns>
        <columns>Vertical__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Wishlist_Origin__c</field>
            <operation>equals</operation>
            <value>B2C</value>
        </filters>
        <label>All Active B2C Campaigns</label>
    </listViews>
    <listViews>
        <fullName>All_Active_Sourcing_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>Content_Type__c</columns>
        <columns>CAMPAIGN.NUM_OPPORTUNITIES</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>Career_Path__c</columns>
        <columns>Competency__c</columns>
        <columns>Vertical__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.Partnerships</value>
        </filters>
        <label>All Active Sourcing Campaigns</label>
    </listViews>
    <listViews>
        <fullName>Certificates</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>Content_Type__c</columns>
        <columns>Vertical__c</columns>
        <columns>Career_Path__c</columns>
        <columns>CAMPAIGN.NUM_OPPORTUNITIES</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Content_Type__c</field>
            <operation>equals</operation>
            <value>Certificate</value>
        </filters>
        <label>All Active Certificates</label>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <recordTypes>
        <fullName>Partnerships</fullName>
        <active>true</active>
        <description>Partnerships campaign type</description>
        <label>Partnerships</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>